fix: Fixing syntax error

--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     },
     {
         "package": "annex",
-        "url": ""https://github.com/IEA-EBC-Annex86/annex"
+        "url": "https://github.com/IEA-EBC-Annex86/annex"
     }
 ]
